testcases/semantic/invalid/test.rs
fn main() {
    42  // Missing semicolon - LL(1) can detect this as unexpected token
    printInt(1);
    exit(0);
}